--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.84.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.26"
+    "framer-motion": "^12.23.26",
+    "reactflow": "^11.11.4"
   }
 }
