--- a/promin/package.json
+++ b/promin/package.json
@@ -18,7 +18,8 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
